--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,15 @@
 <resources>
 
     <string name="app_name">Ultimate Purdue Diner</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="Earhart">Earhart</string>
+    <string name="Ford">Ford</string>
+    <string name="Hillenbrand">Hillenbrand</string>
+    <string name="Wiley">Wiley</string>
+    <string name="Windsor">Windsor</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
+    <string name="date">Select Date</string>
     <string name="action_settings">Settings</string>
 
 </resources>
