--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,10 @@
     <string name="action_example">Example action</string>
     <string name="date">Select Date</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_tabbed">tabbed</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
