--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="action_example">Example action</string>
-    <string name="date">Select Date</string>
+    <string name="date">Today</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_tabbed">tabbed</string>
     <string name="title_section1">Section 1</string>
